Commit kedua: menambahkan style, gambar profil, dan footer

--- a/Vin.html
+++ b/Vin.html
@@ -2,28 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tugas Pembelajaran Platform </title>
+    <title>Tugas Pembelajaran Platform</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f6f9;
+            margin: 20px;
+        }
+        h1, h2, h3, h4 {
+            color: #2c3e50;
+        }
+        .profile {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .profile img {
+            width: 150px;
+            border-radius: 50%;
+            border: 3px solid #2c3e50;
+        }
+        table {
+            border-collapse: collapse;
+            width: 60%;
+            margin: 20px auto;
+        }
+        th, td {
+            border: 1px solid #2c3e50;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #34495e;
+            color: white;
+        }
+        footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 14px;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
- 
-    <h1 align="center">Hai perkenalkan nama saya Gevin </h1>
-    <h2 align="left">Ini perkenalan singkat mengenai diri saya</h2>
-    <h3 align="right">Beberapa hal yang saya akan ceritakan disini </h3>
-
-   
-    <p align="left">Perkenalkan saya Gevin yang sedang mempelajari Git dan Github</p>
-    <p align="center">Saya suka coding, terutama Java dan Python.</p>
-    <p align="right">Saya juga senang berkolaborasi dengan teman-teman di kampus.</p>
-
-    <p><b>Bold</b>, <i>Italic</i>, <u>Underline</u>, <span style="color:red;">Teks Merah</span></p>
-
+    <div class="profile">
+        <h1>Hai, perkenalkan nama saya Gevin</h1>
+        <img src="https://avatars.githubusercontent.com/u/1?v=4" alt="Foto Profil">
+        <p><i>Mahasiswa yang sedang belajar Git & GitHub</i></p>
+    </div>
 
     <h2>Hobi Saya</h2>
     <ul>
         <li>Ngoding</li>
         <li>Main game</li>
-        <li>Ngopi bareng teman dan berbagai hal yang saya sukai lainnya 
-        </li>
+        <li>Ngopi bareng teman</li>
     </ul>
 
     <h2>Rencana Belajar</h2>
@@ -33,13 +64,8 @@
         <li>Belajar Web Development</li>
     </ol>
 
-    <p>Kunjungi profil GitHub saya: 
-        <a href="https://github.com/Gevineastt" target="_blank">GitHub Vin</a>
-    </p>
-
-
     <h2>Jadwal Harian</h2>
-    <table border="1" cellpadding="5" cellspacing="0">
+    <table>
         <tr>
             <th>Hari</th>
             <th>Kegiatan</th>
@@ -57,5 +83,13 @@
             <td>Belajar GitHub</td>
         </tr>
     </table>
+
+    <p>Kunjungi profil GitHub saya: 
+        <a href="https://github.com/Gevineastt" target="_blank">GitHub Vin</a>
+    </p>
+
+    <footer>
+        &copy; 2026 Gevin - Dibuat untuk latihan Git & GitHub
+    </footer>
 </body>
 </html>
