Commit yang ketiga : modifikasi html nya dan menambahkan css untuk memperbaiki tampilan dan belajar

--- a/Vin.html
+++ b/Vin.html
@@ -3,51 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Tugas Pembelajaran Platform</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f6f9;
-            margin: 20px;
-        }
-        h1, h2, h3, h4 {
-            color: #2c3e50;
-        }
-        .profile {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .profile img {
-            width: 150px;
-            border-radius: 50%;
-            border: 3px solid #2c3e50;
-        }
-        table {
-            border-collapse: collapse;
-            width: 60%;
-            margin: 20px auto;
-        }
-        th, td {
-            border: 1px solid #2c3e50;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #34495e;
-            color: white;
-        }
-        footer {
-            text-align: center;
-            margin-top: 30px;
-            font-size: 14px;
-            color: #555;
-        }
-    </style>
+    <link rel="stylesheet" href="Vin.css">
+
 </head>
 <body>
+
+<div class="container">
+
     <div class="profile">
         <h1>Hai, perkenalkan nama saya Gevin</h1>
-        <img src="https://avatars.githubusercontent.com/u/1?v=4" alt="Foto Profil">
-        <p><i>Mahasiswa yang sedang belajar Git & GitHub</i></p>
+        <p><i>Mahasiswa Informatika Sanata Dharma </i></p>
     </div>
 
     <h2>Hobi Saya</h2>
@@ -84,12 +49,16 @@
         </tr>
     </table>
 
-    <p>Kunjungi profil GitHub saya: 
+    <p style="margin-top:20px;">
+        Kunjungi profil GitHub saya: 
         <a href="https://github.com/Gevineastt" target="_blank">GitHub Vin</a>
     </p>
 
     <footer>
         &copy; 2026 Gevin - Dibuat untuk latihan Git & GitHub
     </footer>
+  
+</div>
+
 </body>
 </html>
