Menambahkan isi dari profile terdiri dari hobby passion

--- a/Vin.html
+++ b/Vin.html
@@ -113,9 +113,9 @@
 
             <h3>Prestasi</h3>
             <ul>
-                <li>Juara lomba coding tingkat kampus</li>
+                <li>Juara Lomba Short Film tingkat provinsi DIY</li>
                 <li>Peserta hackathon regional</li>
-                <li>Aktif di organisasi mahasiswa</li>
+                <li>Aktif di organisasi diluar kampus </li>
             </ul>
         </div>
     </div>
@@ -129,9 +129,9 @@
             <h3>Programming Languages</h3>
             <ul>
                 <li>HTML5 - Advanced</li>
-                <li>CSS3 - Advanced</li>
-                <li>JavaScript - Intermediate</li>
-                <li>Python - Intermediate</li>
+                <li>Logo Design - Advanced</li>
+                <li>Cover Book Design - Advance</li>
+                <li>Python - Basic</li>
                 <li>Java - Basic</li>
             </ul>
 
