--- a/Vin.html
+++ b/Vin.html
@@ -188,8 +188,8 @@
             
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="design1.jpg" alt="Design 1">
-                    <div class="portfolio-overlay">Logo Design</div>
+                    <img src="THIRTY SEVEN BRAINS-01.jpg" alt="Design 1">
+                    <div class="portfolio-overlay"></div>
                 </div>
                 <div class="portfolio-item">
                     <img src="design2.jpg" alt="Design 2">
@@ -218,7 +218,7 @@
                 <li>Adobe Photoshop</li>
                 <li>Adobe Illustrator</li>
                 <li>Figma</li>
-                <li>Canva</li>
+                <li>Procreate</li>
             </ul>
         </div>
     </div>
@@ -231,11 +231,11 @@
                 <div class="hobby-card">
                     <i class="fas fa-laptop-code"></i>
                     <h3>Ngoding</h3>
-                    <p>Menulis kode dan membuat project menarik di waktu luang</p>
+                    <p>Membuat Portofolio baru untuk design Cover book </p>
                 </div>
                 <div class="hobby-card">
                     <i class="fas fa-gamepad"></i>
-                    <h3>Main Game</h3>
+                    <h3>Riding & Touring</h3>
                     <p>Bermain game untuk refreshing dan entertainment</p>
                 </div>
                 <div class="hobby-card">
@@ -255,7 +255,7 @@
                 <div class="timeline-item">
                     <div class="timeline-number">1</div>
                     <div class="timeline-content">
-                        <h3>Belajar Git</h3>
+                        <h3>Belajar </h3>
                         <p>Memahami version control system dan perintah-perintah dasar Git untuk mengelola project dengan efektif</p>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
                         </tr>
                         <tr>
                             <td><strong>Rabu</strong></td>
-                            <td>Belajar GitHub</td>
+                            <td>Take a freelance Design Job</td>
                         </tr>
                         <tr>
                             <td><strong>Kamis</strong></td>
@@ -312,7 +312,7 @@
                         </tr>
                         <tr>
                             <td><strong>Sabtu</strong></td>
-                            <td>Ngopi & Ngoding Santai</td>
+                            <td>Ngopi & Riding Santai</td>
                         </tr>
                         <tr>
                             <td><strong>Minggu</strong></td>
