Menambahkan gambar untuk bagian portofolio design dan membenahi pada isi dari profile

--- a/Vin.html
+++ b/Vin.html
@@ -188,15 +188,15 @@
             
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="THIRTY SEVEN BRAINS-01.jpg" alt="Design 1">
+                    <img src="THIRTY SEVEN BRAINS.jpg" alt="Design 1">
                     <div class="portfolio-overlay"></div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="design2.jpg" alt="Design 2">
-                    <div class="portfolio-overlay">Web UI Design</div>
+                    <img src="PRIME PLUSH.jpg" alt="Design 2">
+                    <div class="portfolio-overlay"></div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="design3.jpg" alt="Design 3">
+                    <img src="UNIVERSAL ARMOR.jpg" alt="Design 3">
                     <div class="portfolio-overlay">Mobile App UI</div>
                 </div>
                 <div class="portfolio-item">
@@ -204,7 +204,7 @@
                     <div class="portfolio-overlay">Poster Design</div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="design5.jpg" alt="Design 5">
+                    <img src="YU PHARMI .jpg" alt="Design 5">
                     <div class="portfolio-overlay">Banner Design</div>
                 </div>
                 <div class="portfolio-item">
