Menambahkan gambar semua untuk kategori portofolio design

--- a/Vin.html
+++ b/Vin.html
@@ -192,23 +192,23 @@
                     <div class="portfolio-overlay"></div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="PRIME PLUSH.jpg" alt="Design 2">
+                    <img src="YU PHARMI.jpg" alt="Design 2">
                     <div class="portfolio-overlay"></div>
                 </div>
                 <div class="portfolio-item">
                     <img src="UNIVERSAL ARMOR.jpg" alt="Design 3">
-                    <div class="portfolio-overlay">Mobile App UI</div>
+                    <div class="portfolio-overlay"></div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="design4.jpg" alt="Design 4">
+                    <img src="UNIVERSE WING.jpg" alt="Design 4">
                     <div class="portfolio-overlay">Poster Design</div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="YU PHARMI.jpg" alt="Design 5">
+                    <img src="PRIME PLUSH.jpg" alt="Design 5">
                     <div class="portfolio-overlay">Banner Design</div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="design6.jpg" alt="Design 6">
+                    <img src="PRIME PETROLIUM.jpg" alt="Design 6">
                     <div class="portfolio-overlay">Illustration</div>
                 </div>
             </div>
